don't break location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ permalink: /
     <img src="images/me.jpg">
   </div>
   <p>
-    Hello, my name is Andreas Mausch, I am a freelancing software developer from <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fa fa-map-marker"></i> Hamburg, Germany</a>.
+    Hello, my name is Andreas Mausch, I am a freelancing software developer from
+    <span class="location">
+      <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fa fa-map-marker"></i> Hamburg, Germany</a>.
+    </span>
   </p>
 </div>
 
