--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ permalink: /
     <p>
       I love to put a lot of time in automating recurring manual tasks to save even more time mid- to long-term.
       Let the machines do the boring work and focus on the exciting stuff.
-      Continuous Delivery is a given.
+      Continuous Delivery is a given. Builds are reproducible.
+      Keep knowledge how to build and deploy in the repo, not in individual's brains.
       I dislike feature branches, I do like toggles though.
     </p>
   </div>
