pair programming :o how can i miss that

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ permalink: /
       I am familiar with Assembly, different processor architectures, network protocols, etc.
       I've spent hundreds of hours in low-level analysis with OllyDbg and Wireshark.
       If a software doesn't behave as expected I want to know (and not guess) why.
+      I'm a fan of pair programming to share knowledge inside the team and improve quality.
     </p>
   </div>
   <div class="one-half column">
@@ -70,7 +71,7 @@ permalink: /
     <h2>Open</h2>
     <p>
       I try to find the best fitting technology for a given problem.
-      While my professional background is mostly Java, I have different projects developed with all kind of technologies out there:
+      While my professional background is mostly Java, I have developed different projects with all kind of technologies out there:
       Kotlin, Groovy, Node, Python, just to name a few.
       I am amazed how software development has changed over the last two decades and I don't want to miss chances to improve.
       Also, I am a big fan of Open Source.
