--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ permalink: /
       Let the machines do the boring work and focus on the exciting stuff.
       Continuous Delivery is a given. Builds are reproducible.
       Keep knowledge how to build and deploy in the repo, not in individual's brains.
-      I dislike feature branches, I do like toggles though.
+      I dislike feature branches, I do like (short-living!) toggles though.
     </p>
   </div>
   <div class="one-half column">
