--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,39 @@ permalink: /resume/
 <div class="home">
 
   <section class="section key-skills-section">
+    <h2 class="section-title"><i class="fa fa-american-sign-language-interpreting"></i>Skills</h2>
+
     <ul class="key-skills row">
-      <li class="one-third column"><div class="centered"><div class="key-skill">Java</div></div></li>
-      <li class="one-third column"><div class="centered"><div class="key-skill">CI/CD</div></div></li>
-      <li class="one-third column"><div class="centered"><div class="key-skill">Full Stack</div></div></li>
+      <li class="one-third column">
+        <div class="centered fixed">
+          <div class="key-skill">Java</div>
+        </div>
+        <ul class="sub-key-skills">
+          <li>Kotlin</li>
+          <li>Python</li>
+          <li>JavaScript</li>
+        </ul>
+      </li>
+      <li class="one-third column">
+        <div class="centered fixed">
+          <div class="key-skill">CI/CD</div>
+        </div>
+        <ul class="sub-key-skills">
+          <li>Docker</li>
+          <li>Test-driven</li>
+          <li>1-click deployment</li>
+        </ul>
+      </li>
+      <li class="one-third column">
+        <div class="centered fixed">
+          <div class="key-skill">Full Stack</div>
+        </div>
+        <ul class="sub-key-skills">
+          <li>Webapps</li>
+          <li>API</li>
+          <li>Mobile apps</li>
+        </ul>
+      </li>
     </ul>
   </section>
 
