Contact and availability

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@ permalink: /
       <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fa fa-map-marker"></i> Hamburg, Germany</a>.
     </span>
   </p>
+  <p>
+    I'm available from <span class="availability">September 2019</span>.
+  </p>
+  <p>
+    You can contact me on <i class="fa fa-envelope"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a>
+    or <i class="fa fa-phone"></i> <a href="tel:+4915757575577">+49 157 5757 5577</a>.
+  </p>
 </div>
 
 <div class="row social-links">
