Contact: No line-break between icon and text

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ permalink: /
     I'm available from <span class="availability">September 2019</span>.
   </p>
   <p>
-    You can contact me on <i class="fa fa-envelope"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a>
-    or <i class="fa fa-phone"></i> <a href="tel:+4915757575577">+49 157 5757 5577</a>.
+    You can contact me on <span class="contact-email"><i class="fa fa-envelope"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a></span>
+    or <span class="contact-phone"><i class="fa fa-phone"></i> <a href="tel:+4915757575577">+49 157 5757 5577</a></span>.
   </p>
 </div>
 
