Social media links: style them the same as contact links

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ permalink: /
 
   <div class="row social-links">
     <div class="one-third column">
-      <a href="https://github.com/andreas-mausch" target="_blank"><i class="fa fa-github"></i> GitHub</a>
+      <i class="fa fa-github"></i> <a href="https://github.com/andreas-mausch" target="_blank">GitHub</a>
     </div>
     <div class="one-third column">
-      <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank"><i class="fa fa-linkedin"></i> LinkedIn</a>
+      <i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank">LinkedIn</a>
     </div>
     <div class="one-third column">
-      <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank"><i class="fa fa-xing"></i> Xing</a>
+      <i class="fa fa-xing"></i> <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
     </div>
   </div>
 </div>
