--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@ permalink: /
   <p>
     Hello, my name is Andreas Mausch, I am a freelancing software developer from
     <span class="location">
-      <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fa fa-map-marker"></i> Hamburg, Germany</a>.
+      <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fas fa-map-marker-alt"></i> Hamburg, Germany</a>.
     </span>
   </p>
   <p>
     I'm available from <span class="availability">September 2019</span>.
   </p>
   <p>
-    You can contact me on <span class="contact-email"><i class="fa fa-envelope"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a></span>
-    or <span class="contact-phone"><i class="fa fa-phone"></i> <a href="tel:+4915757575577">+49 157 5757 5577</a></span>.
+    You can contact me on <span class="contact-email"><i class="fas fa-envelope-open-text"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a></span>
+    or <span class="contact-phone"><i class="fas fa-phone"></i> <a href="tel:+4915757575577">+49 157 5757 5577</a></span>.
   </p>
 
   <div class="row social-links">
     <div class="one-third column">
-      <i class="fa fa-github"></i> <a href="https://github.com/andreas-mausch" target="_blank">GitHub</a>
+      <i class="fab fa-github"></i> <a href="https://github.com/andreas-mausch" target="_blank">GitHub</a>
     </div>
     <div class="one-third column">
-      <i class="fa fa-linkedin"></i> <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank">LinkedIn</a>
+      <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank">LinkedIn</a>
     </div>
     <div class="one-third column">
-      <i class="fa fa-xing"></i> <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
+      <i class="fab fa-xing"></i> <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
     </div>
   </div>
 </div>
