--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@ permalink: /resume/
 <div class="home">
 
   <section class="section key-skills-section">
-    <h2 class="section-title"><i class="fa fa-american-sign-language-interpreting"></i>Skills</h2>
+    <h2 class="section-title"><i class="fas fa-american-sign-language-interpreting"></i>Skills</h2>
 
     <ul class="key-skills row">
       <li class="one-third column">
@@ -46,7 +46,7 @@ permalink: /resume/
   </section>
 
   <section class="section projects-section">
-      <h2 class="section-title"><i class="fa fa-rocket"></i>Notable projects</h2>
+      <h2 class="section-title"><i class="fas fa-rocket"></i>Notable projects</h2>
 
       {% for project in site.data.projects %}
       <div class="item project row">
@@ -86,7 +86,7 @@ permalink: /resume/
     </section>
 
     <section class="section projects-section">
-      <h2 class="section-title"><i class="fa fa-users"></i>Other clients</h2>
+      <h2 class="section-title"><i class="fas fa-users"></i>Other clients</h2>
       <div class="other-customers">
         {% for image in site.static_files %}
           {% if image.path contains 'images/resume/other-customers' %}
@@ -99,7 +99,7 @@ permalink: /resume/
     </section>
 
     <section class="section experiences-section">
-    <h2 class="section-title"><i class="fa fa-tasks"></i>Experiences</h2>
+    <h2 class="section-title"><i class="fas fa-list"></i>Experiences</h2>
 
     {% for experience in site.data.experiences %}
     <div class="item experience row">
@@ -123,7 +123,7 @@ permalink: /resume/
   </section>
 
   <section class="section educations-section">
-    <h2 class="section-title"><i class="fa fa-graduation-cap"></i>Educations</h2>
+    <h2 class="section-title"><i class="fas fa-graduation-cap"></i>Educations</h2>
 
     {% for education in site.data.educations %}
     <div class="item education row">
