Location link: style it the same as contact links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
   <p>
     Hello, my name is Andreas Mausch, I am a freelancing software developer from
     <span class="location">
-      <a href="https://www.google.com/maps/place/Hamburg" target="_blank"><i class="fas fa-map-marker-alt"></i> Hamburg, Germany</a>.
+      <i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/Hamburg" target="_blank">Hamburg, Germany</a>.
     </span>
   </p>
   <p>
