resume-title-section

--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,8 @@ permalink: /resume/
 
 <div class="home">
 
+  <section class="section resume-title-section">
+  </section>
   <section class="section key-skills-section">
     <h2 class="section-title"><i class="fas fa-american-sign-language-interpreting"></i>Skills</h2>
 
