Remove unnecessary section css class

--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,9 @@ permalink: /resume/
 
 <div class="home">
 
-  <section class="section resume-title-section">
+  <section class="resume-title-section">
   </section>
-  <section class="section key-skills-section">
+  <section class="key-skills-section">
     <h2 class="section-title"><i class="fas fa-american-sign-language-interpreting"></i>Skills</h2>
 
     <ul class="key-skills row">
@@ -47,7 +47,7 @@ permalink: /resume/
     </ul>
   </section>
 
-  <section class="section projects-section">
+  <section class="projects-section">
       <h2 class="section-title"><i class="fas fa-rocket"></i>Notable projects</h2>
 
       {% for project in site.data.projects %}
@@ -87,7 +87,7 @@ permalink: /resume/
       {% endfor %}
     </section>
 
-    <section class="section projects-section">
+    <section class="projects-section">
       <h2 class="section-title"><i class="fas fa-users"></i>Other clients</h2>
       <div class="other-customers">
         {% for image in site.static_files %}
@@ -100,7 +100,7 @@ permalink: /resume/
       </div>
     </section>
 
-    <section class="section experiences-section">
+    <section class="experiences-section">
     <h2 class="section-title"><i class="fas fa-list"></i>Experiences</h2>
 
     {% for experience in site.data.experiences %}
@@ -124,7 +124,7 @@ permalink: /resume/
     {% endfor %}
   </section>
 
-  <section class="section educations-section">
+  <section class="educations-section">
     <h2 class="section-title"><i class="fas fa-graduation-cap"></i>Educations</h2>
 
     {% for education in site.data.educations %}
