Add image to resume-title-section

--- a/resume.html
+++ b/resume.html
@@ -9,6 +9,9 @@ permalink: /resume/
 <div class="home">
 
   <section class="resume-title-section">
+    <div class="image">
+      <img src="../images/me.jpg">
+    </div>
   </section>
   <section class="key-skills-section">
     <h2 class="section-title"><i class="fas fa-american-sign-language-interpreting"></i>Skills</h2>
