--- a/resume.html
+++ b/resume.html
@@ -53,8 +53,8 @@ permalink: /resume/
         </div>
         <ul class="sub-key-skills">
           <li>Kotlin</li>
+          <li>TypeScript</li>
           <li>Python</li>
-          <li>JavaScript</li>
         </ul>
       </li>
       <li class="one-third column">
