Cheat sheets: Clear filter on load

--- a/cheatsheets.html
+++ b/cheatsheets.html
@@ -38,4 +38,8 @@ permalink: /cheatsheets/
       }
     });
   }
+
+  window.onload = function () {
+    document.getElementById("cheatsheet-search").value = "";
+  }
 </script>
