Extract resume-title.html

--- a/projects.html
+++ b/projects.html
@@ -6,35 +6,7 @@ permalink: /projects/
 
 <div class="home">
 
-  <section class="resume-title-section">
-    <div class="resume-title">
-      <div class="image">
-        <img src="../images/me.jpg">
-      </div>
-      <div class="summary">
-        <div class="name">
-          Andreas Mausch
-        </div>
-
-        <dl>
-          <dt>E-Mail</dt>
-          <dd>andreas.mausch@gmail.com</dd>
-          <dt>Phone</dt>
-          <dd>+49 157 5757 5577</dd>
-          <dt>Web</dt>
-          <dd>https://andreas-mausch.de</dd>
-        </dl>
-        <dl>
-          <dt>Job</dt>
-          <dd>Software Developer</dd>
-          <dt>Location</dt>
-          <dd>Hamburg, Germany</dd>
-          <dt>Availability</dt>
-          <dd>June 2020</dd>
-        </dl>
-      </div>
-    </div>
-  </section>
+  {% include resume-title.html %}
 
   <section class="all-projects-section">
     <h2 class="section-title"><i class="fas fa-rocket"></i>Projects</h2>
