--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@ permalink: /
     <img src="images/me.jpg">
   </div>
   <p>
-    Hello, my name is Andreas Mausch, I am a freelancing software developer from
+    Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
       <i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps/place/Hamburg" target="_blank">Hamburg, Germany</a>.
     </span>
-  </p>
-  <p>
-    I'm available from <span class="availability">July 2020</span>.
   </p>
   <p>
     You can contact me on <span class="contact-email"><i class="fas fa-envelope-open-text"></i> <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a></span>
