deploy: e689b2bc095e411033279ecacecfb662cb8e1fd0

--- a/index.html
+++ b/index.html
@@ -39,9 +39,89 @@
     </header>
     <div class="content">
       
-<h1>andreas-mausch.de</h1>
-
-Index
+<div class="me">
+  <div class="image">
+    <img src="/images/me.jpg" alt="Profile picture">
+  </div>
+  <p>
+    Hello, my name is Andreas Mausch, I am a software developer from
+    <span class="location">
+      <i class="fas fa-map-marker-alt"></i>
+      <a href="https://www.google.com/maps/place/Hamburg" target="_blank">Hamburg, Germany</a>.
+    </span>
+  </p>
+  <p>
+    You can contact me on
+    <span class="contact-email">
+      <i class="fas fa-envelope-open-text"></i>
+      <a href="mailto:andreas.mausch@gmail.com">andreas.mausch@gmail.com</a>
+    </span>
+    or
+    <span class="contact-phone">
+      <i class="fas fa-phone"></i>
+      <a href="tel:+4915757575577">+49 157 5757 5577</a>
+    </span>.
+  </p>
+  <div class="social-links">
+    <span>
+      <i class="fab fa-github"></i>
+      <a href="https://github.com/andreas-mausch" target="_blank">GitHub</a>
+    </span>
+    <span>
+      <i class="fab fa-linkedin"></i>
+      <a href="https://www.linkedin.com/in/andreas-mausch-78483058" target="_blank">LinkedIn</a>
+    </span>
+    <span>
+      <i class="fab fa-xing"></i>
+      <a href="https://www.xing.com/profile/Andreas_Mausch2" target="_blank">Xing</a>
+    </span>
+  </div>
+</div>
+<div class="how-i-work">
+  <h1>How I work.</h1>
+  <div class="how-i-work-values">
+    <div>
+      <img src="/images/automation.svg" alt="Automation">
+      <h2>Automation</h2>
+      <p>
+        I love to put a lot of time in automating recurring manual tasks to save even more time mid- to long-term. Let the
+        machines do the boring work and focus on the exciting stuff. Continuous Delivery is a given. Builds are reproducible.
+        Keep knowledge how to build and deploy in the repo, not in individual's brains. I dislike feature branches, I do like
+        (short-living!) toggles though.
+      </p>
+    </div>
+    <div>
+      <img src="/images/testing.svg" alt="Testing">
+      <h2>Testing</h2>
+      <p>
+        Whether I work on a native mobile app, a web app, an API or a desktop application: It must be tested automatically, and
+        it must be tested from the outside. No more "Uh, not sure if we can change that, it might break something on the other
+        end of the app". I like to develop Test-driven, and I like if tests are readable for non-techies. Bug analysis is
+        stressful and time consuming and can be minimized by avoiding them.
+      </p>
+    </div>
+    <div>
+      <img src="/images/digdeep.svg" alt="Dig deep">
+      <h2>Dig deep</h2>
+      <p>
+        Having a good understanding how things work under the hood often helps me. I am familiar with Assembly, different
+        processor architectures, network protocols, etc. I've spent hundreds of hours in low-level analysis with OllyDbg and
+        Wireshark. If a software doesn't behave as expected I want to know (and not guess) why. I'm a fan of pair programming to
+        share knowledge inside the team and improve quality.
+      </p>
+    </div>
+    <div>
+      <img src="/images/open.svg" alt="Open">
+      <h2>Open</h2>
+      <p>
+        I try to find the best fitting technology for a given problem. While my professional background is mostly Java, I have
+        developed different projects with all kind of technologies out there: Kotlin, Groovy, Node, Python, just to name a few.
+        I am amazed how software development has changed over the last two decades and I don't want to miss chances to improve.
+        Also, I am a big fan of Open Source.
+      </p>
+    </div>
+  </div>
+</div>
 
     </div>
   </body>
