--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="content">
       
 <div class="me">
-  <img src="/images/me.jpg" alt="Profile picture" width="200" height="200">
+  <div class="me-image"></div>
   <p>
     Hello, my name is Andreas Mausch, I am a software developer from
     <span class="location">
